--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -41,6 +41,7 @@
                   <div class="item-price">
                       @configuredPizza.GetFormattedTotalPrice()
                   </div>
+                  <a @onclick="@(() => OrderState.RemoveConfiguredPizza(configuredPizza))" class="delete-item">x</a>
               </div>
             }
         </div>
