--- a/Shared/ConfigurePizzaDialog.razor
+++ b/Shared/ConfigurePizzaDialog.razor
@@ -4,7 +4,7 @@
   <div class="dialog">
     <div class="dialog-title">
       <h2>@Pizza.Special.Name</h2>
-            @Pizza.Special.Description
+      @Pizza.Special.Description
     </div>
     <form class="dialog-body">
       <div>
@@ -14,9 +14,10 @@
           min="@Pizza.MinimumSize"
           max="@Pizza.MaximumSize"
           step="1"
+        @bind="Pizza.Size"
         />
         <span class="size-label">
-                    @(Pizza.Size)" (£@(Pizza.GetFormattedTotalPrice()))
+          @(Pizza.Size)" (£@(Pizza.GetFormattedTotalPrice()))
         </span>
       </div>
     </form>
@@ -36,12 +37,12 @@
 </div>
 
 @code {
-    [Parameter] public Pizza Pizza { get; set; }
-    [Parameter]
-    public
-    EventCallback OnCancel
-    { get; set; }
-    [Parameter]
-    public EventCallback OnConfirm
-    { get; set; }
+  [Parameter] public Pizza Pizza { get; set; }
+  [Parameter]
+  public
+  EventCallback OnCancel
+  { get; set; }
+  [Parameter]
+  public EventCallback OnConfirm
+  { get; set; }
 } 
